still fixing cutoff

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -15,7 +15,7 @@ html {
 	text-align: left;
 	vertical-align: middle;
 	/*margin: auto;*/
-	font-size: 120%;
+	font-size: 100%;
 }
 .cent {
 	text-align: center;
